--- a/tests/integration/targets/vm_clone/tasks/11_clone_stopped_cloudinit.yml
+++ b/tests/integration/targets/vm_clone/tasks/11_clone_stopped_cloudinit.yml
@@ -1,3 +1,14 @@
+# ---------------------------------------------------------------------------------------------------------------------
+- name: Retrieve XLAB-vm_clone_CI-test
+  scale_computing.hypercore.vm_info:
+    vm_name: XLAB-vm_clone-CI_test
+  register: source_info
+- ansible.builtin.assert:
+    that:
+      - source_info.records | length == 1
+
+# ----------------------------------Clone check------------------------------------------------------------------------
+
 - name: Clone XLAB-vm_clone_CI-test into XLAB-vm_clone_CI-test-cloud_init-clone
   scale_computing.hypercore.vm_clone:
     vm_name: XLAB-vm_clone_CI-test-cloud_init-clone
@@ -28,7 +39,7 @@
       - source_info.records.0.boot_devices | length == cloned_cloud_init_info.records.0.boot_devices | length
       - source_info.records.0.disks | length != cloned_cloud_init_info.records.0.disks | length
       - source_info.records.0.nics | length == cloned_cloud_init_info.records.0.nics | length
-      - source_info.records.0.nics.0.mac !=  cloned_info.records.0.nics.0.mac
+      - source_info.records.0.nics.0.mac !=  cloned_cloud_init_info.records.0.nics.0.mac
       - source_info.records.0.node_affinity == cloned_cloud_init_info.records.0.node_affinity
 
 # ----------------------------------Idempotence check------------------------------------------------------------------------
@@ -62,5 +73,5 @@
       - source_info.records.0.boot_devices | length == cloned_cloud_init_info.records.0.boot_devices | length
       - source_info.records.0.disks | length != cloned_cloud_init_info.records.0.disks | length
       - source_info.records.0.nics | length == cloned_cloud_init_info.records.0.nics | length
-      - source_info.records.0.nics.0.mac !=  cloned_info.records.0.nics.0.mac
+      - source_info.records.0.nics.0.mac !=  cloned_cloud_init_info.records.0.nics.0.mac
       - source_info.records.0.node_affinity == cloned_cloud_init_info.records.0.node_affinity
