--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -1,2 +1,5 @@
 ---
-requires_ansible: ">=2.9.10"
+# In requires_ansible we need to avoid unsupported ansible versions
+# to make ansible-lint happy.
+# The collection should still work also with older ansible versions.
+requires_ansible: ">=2.14.0"
